--- a/src/phala-paper.tex
+++ b/src/phala-paper.tex
@@ -22,6 +22,12 @@
     \leftmargin 0.15in}}
   {\normalsize\end{list}}
 
+% For Publication
+% \newcommand{\zsf}[1]{{#1}}
+% \def\zhou#1{#1}
+
+% For Draft
+\newcommand{\zsf}[1]{\textcolor{green!50!black}{#1}}
 \usepackage{xspace}
 \usepackage{todonotes}
 \def\zhou#1{\todo[inline,backgroundcolor=yellow]{{\bf Comments from sfzhou:} #1}\xspace}
