--- a/src/tex/3-design.tex
+++ b/src/tex/3-design.tex
@@ -88,7 +88,11 @@ There are a few roles involved in the protocol.
     \label{fig:roles}
 \end{figure}
 
-\subsection{Worker Node Registration}
+\subsection{Worker Node and pRuntime}
+
+\hang{todo: explain the position and the responsibility of the runtime}
+
+\subsection{Node Registration}
 
 All the Worker Nodes are required to be registered on the blockchain before participating in mining or Gatekeeper election.
 
@@ -128,7 +132,7 @@ Genesis Node assists the launch of the blockchain until it finishes:
 
     \item The blockchain is at pre-launch phase after the genesis block. Governance module is enabled but other modules including confidential contract are still disabled until the Gatekeepers are elected.
 
-    \item Worker Nodes who want to participate in Gatekeeper election can follow the \textbf{Worker Node Registration} scheme to register their identities on the blockchain. Then $n_{gk}$ (a chain parameter between tens to hundreds) Gatekeepers will be elected during the pre-launch phase. This can be done via an on-chain Polkadot-style NPoS validator election (see Appendix II for details).
+    \item Worker Nodes who want to participate in Gatekeeper election can follow the \textbf{Node Registration} scheme to register their identities on the blockchain. Then $n_{gk}$ (a chain parameter between tens to hundreds) Gatekeepers will be elected during the pre-launch phase. This can be done via an on-chain Polkadot-style NPoS validator election (see Appendix II for details).
 
     \item When the election is finished, the Gatekeepers send a request to the Genesis Node for $k_g$ through a TLS connection. The Genesis Node only answers the requests from the selected Gatekeeper.
 
@@ -141,7 +145,7 @@ Periodical key rotation is necessary for forward secrecy. The latest key at epoc
 
 \subsection{Deploy Worker Nodes}
 
-Both Miners and Gatekeepers have to follow the "Worker Node Registration" scheme to join the network. To ensure the service quality, all the worker nodes must stake a certain amount of the Phala token and \textbf{could be slashed} once it fails to meet the responsive requirements. We will discuss the details about staking and monitoring in "Responsiveness Monitoring" section.
+Both Miners and Gatekeepers have to follow the "Node Registration" scheme to join the network. To ensure the service quality, all the worker nodes must stake a certain amount of the Phala token and \textbf{could be slashed} once it fails to meet the responsive requirements. We will discuss the details about staking and monitoring in "Responsiveness Monitoring" section.
 
 As Gatekeepers store the root key and need to be always online, they have to meet a higher standard and need to stake a larger amount. They are rewarded for keeping online and could be slashed otherwise.
 
@@ -214,13 +218,13 @@ As mentioned in section "Execute the Contract", one of the side-effects produced
 
 Both Gatekeepers and miners are required to keep the responsiveness to keep the functionality of Phala Network. Gatekeepers have to maintain a high level of responsiveness because the root key is kept inside the Gatekeepers runtime and must be available at any time. As long as Gatekeepers can serve the contract key for miners, the availability of the contracts can be guaranteed. So unresponsive miners are not as harmful as unresponsive Gatekeepers to the system.
 
-We adopt a Polkadot-like unresponsiveness detection algorithm (https://research.web3.foundation/en/latest/polkadot/slashing/amounts/\#unresponsiveness). Both Gatekeepers and miners produce side-effects by their runtime. They have to at least post the state updates periodically to the blockchain within an interval. So all the submitted side-effects can be used as a counter of the online activities. Then we can determine if a node $n$ is unresponsive in an era by
+We adopt a Polkadot-like unresponsiveness detection algorithm~\cite{polkadotunresponsiveness}. Both Gatekeepers and miners produce side-effects by their runtime. They have to at least post the state updates periodically to the blockchain within an interval. So all the submitted side-effects can be used as a counter of the online activities. Then we can determine if a node $n$ is unresponsive in an era by
 $$
     c_n < \frac{1}{4} \max\limits_{n'}{c_{n'}}
 $$
 where $c_n$ is the activity counter for node $n$ and $n'$ is all the connected worker nodes in the era. For the detailed design of slash, please refer to Economic Design Paper.
 
-
+ 
 \section{Open Question}
 
 Security fallbacks:
