Ref: polkadot slashing

--- a/src/bibfile.bib
+++ b/src/bibfile.bib
@@ -21,3 +21,8 @@
   howpublished={\url{https://software.intel.com/en-us/sgx/attestation-services}},
   year={2019}
 }
+@misc{polkadotslashing,
+  title={Polkadot Slashing Mechanisms},
+  howpublished={\url{https://research.web3.foundation/en/latest/polkadot/slashing/amounts/}},
+  year={2019}
+}
