--- a/src/bibfile.bib
+++ b/src/bibfile.bib
@@ -26,3 +26,31 @@
   howpublished={\url{https://research.web3.foundation/en/latest/polkadot/slashing/amounts/}},
   year={2019}
 }
+@misc{van2013cryptonote,
+  title={CryptoNote v 2.0},
+  author={Van Saberhagen, Nicolas},
+  howpublished={\url{https://cryptonote.org/whitepaper.pdf}},
+  year={2013}
+}
+@inproceedings{sasson2014zerocash,
+  title={Zerocash: Decentralized anonymous payments from bitcoin},
+  author={Sasson, Eli Ben and Chiesa, Alessandro and Garman, Christina and Green, Matthew and Miers, Ian and Tromer, Eran and Virza, Madars},
+  booktitle={2014 IEEE Symposium on Security and Privacy},
+  pages={459--474},
+  year={2014},
+  organization={IEEE}
+}
+@misc{eventsourcing,
+  title={Event Sourcing design pattern},
+  howpublished={\url{https://docs.microsoft.com/en-us/azure/architecture/patterns/event-sourcing}}
+}
+@misc{cqrs,
+  title={Command and Query Responsibility Segregation (CQRS) pattern},
+  howpublished={\url{https://docs.microsoft.com/en-us/azure/architecture/patterns/cqrs}}
+}
+@article{wood2016polkadot,
+  title={Polkadot: Vision for a heterogeneous multi-chain framework},
+  author={Wood Gavin},
+  howpublished={\url{https://polkadot.network/PolkaDotPaper.pdf}},
+  year={2016}
+}
