add System Design

--- a/src/phala-paper.tex
+++ b/src/phala-paper.tex
@@ -22,6 +22,8 @@
     \leftmargin 0.15in}}
   {\normalsize\end{list}}
 
+\newcommand{\pruntime}{\texttt{pRuntime}\xspace}
+
 % For Publication
 % \newcommand{\zsf}[1]{{#1}}
 % \def\zhou#1{#1}
