--- a/src/tex/1-introduction.tex
+++ b/src/tex/1-introduction.tex
@@ -1,11 +1,14 @@
 \section{Introduction}
 
-Nowadays the security of the permissionless blockchain is typically guaranteed by state replication over consensus algorithms. Though this approach works well for blockchain, it also means that everything on the blockchain is \textit{public}, which brings a problem: confidential information cannot be handled by the blockchain. The lack of confidentiality greatly limits the usage of blockchain in processing sensitive business and user data. For example, traders usually don't want to reveal their positions or order history but DeFi projects publish everything on the blockchain. Dapps are also hard to comply with GDPR for the same reason.
+Nowadays the security of the permissionless blockchain is typically guaranteed by state replication over consensus algorithms. Though this approach works well for blockchain, it also means that everything on the blockchain is \textit{public}, which brings a problem: confidential information cannot be handled by the blockchain. The lack of confidentiality greatly limits the usage of blockchain in processing sensitive business and user data. For example, stock traders usually do not want to reveal their positions or order history.
+% but DeFi projects publish everything on the blockchain.
+% Dapps are also hard to comply with GDPR for the same reason.
+What's more, all of the privacy-related DApps on the Ethereum cannot comply with the General Data Protection Regulation and thus will be prevented in European Union.
 
 Several methodologies have been proposed to address the privacy problem. Monero and Zcash implemented private transaction by ring signature~\cite{van2013cryptonote} and zk-SNARK~\cite{sasson2014zerocash} technology, but their methods can only provide privacy for cryptocurrencies and are hard to be extended to general-purpose smart contracts. MPC (Multi-Party Computing) can theoretically run arbitrary programs without revealing intermediate states to the participants, with the expense of a performance overhead of $10^6$ times~\cite{cheng2019ekiden}, which makes it impractical for real world use cases.
 
 % Currently, pure software solutions are not viable.
-A new approach is to utilize special hardware, i.e. Trusted Execution Environment (TEE)~\cite{teewiki} . TEE is a special area in some processors that provides a higher level of security including isolated execution, code integration, and state confidentiality. Naive TEE as a computing platform has several shortages, such as the lack of a reliable time source and availability guarantee.
+A new approach is to utilize special hardware, i.e., Trusted Execution Environment (TEE)~\cite{teewiki} . TEE is a special area in some processors that provides a higher level of security including isolated execution, code integration, and state confidentiality. Naive TEE as a computing platform has several shortages, such as the lack of a reliable time source and availability guarantee.
 
 Ekiden~\cite{cheng2019ekiden} fixed these problems by introducing a TEE-blockchain hybrid architecture and implemented high performance confidential smart contract platform. However, contracts in Ekiden are isolated, which means the contracts cannot interoperate with each other, let alone external blockchains. Interoperability is a keystone of modern smart contracts. For example, 8 of the top 10 contracts in Ethereum, the largest smart contract platform in the world, rely on functions invocations or money transferring to at least one other contract. Without interoperability, contracts cannot read information or call functions from other smart contracts. What's more, the use of self-defined tokens, one of the most common cases in smart contract usages, is unachievable if all the contracts cannot access the token contract.
 
@@ -13,4 +16,4 @@ Ekiden~\cite{cheng2019ekiden} fixed these problems by introducing a TEE-blockcha
 % Top 10 most used contracts in ETH, 2019-10-04, 7 days accumulated:
 % https://docs.google.com/spreadsheets/d/1pI6BDbH8M1vlldtNUiy2xmqDPmTgVS_hhE0GXprLixA/edit?usp=sharing}
 
-In this paper, we present Phala Network, a novel cross-chain interoperable confidential smart contract network as a Polkadot parachain~\cite{wood2016polkadot}. We introduce an \textit{Event Sourcing / Command Query Responsibility Segregation}~\cite{eventsourcing, cqrs} architecture into a TEE-blockchain hybrid system to achieve cross-chain interoperability for confidential smart contracts. We further designed a Libra-Polkadot bridge to implement a privacy-preserving Libra Coin by confidential contract.
+In this paper, we present Phala Network, a novel cross-chain interoperable confidential smart contract network as a Polkadot parachain~\cite{wood2016polkadot}. We introduce an \textit{Event Sourcing / Command Query Responsibility Segregation}~\cite{eventsourcing, cqrs} architecture into a TEE-blockchain hybrid system to achieve cross-contract and cross-chain interoperability for confidential smart contracts. We further designed a Libra-Polkadot bridge to implement a privacy-preserving Libra Coin by confidential contract.
