Add amd sev & arm trustzone ref

--- a/src/bibfile.bib
+++ b/src/bibfile.bib
@@ -54,3 +54,11 @@
   howpublished={\url{https://polkadot.network/PolkaDotPaper.pdf}},
   year={2016}
 }
+@misc{amdsev,
+  title={AMD Secure Encrypted Virtualization (SEV)},
+  howpublished={\url{https://developer.amd.com/sev/}}
+}
+@misc{armtrustzone,
+  title={Arm TrustZone Technology},
+  howpublished={\url{https://developer.arm.com/ip-products/security-ip/trustzone}}
+}
