--- a/src/tex/2-background.tex
+++ b/src/tex/2-background.tex
@@ -17,7 +17,7 @@ Next, the generated attestation quote is sent to the Intel Remote Attestation Se
 
 Finally, the attestation quote signed by Intel serves as the proof of a successful execution. It proves that specific code has been run inside an SGX enclave and produces certain output, which implies the confidentiality and the correctness of the execution. The proof can be published and validated by anyone with generic hardware.
 
-Intel SGX and the Remote Attestation protocol is the foundation of confidential contract. Except for Intel SGX, there are also alternative implementation choices like AMD SEV~\cite{xxx} and ARM TrustZone~\cite{xxx}.
+Intel SGX and the Remote Attestation protocol is the foundation of confidential contract. Except for Intel SGX, there are also alternative implementation choices like AMD SEV~\cite{amdsev} and ARM TrustZone~\cite{armtrustzone}.
 
 \subsection{Event Sourcing and CQRS}
 
